Library/IstioFiles/apigateway-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: apigateway-route
spec:
  hosts:
    - "*"
  gateways:
    - apigateway-gateway
  http:
    - route:
      - destination:
          host: apigateway
          port:
            number: 8080
