Library/IstioFiles/bookdb-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookdb-timeout
spec:
  hosts:
    - bookdb
  http:
  - route:
    - destination:
        host: bookdb
        port:
          number: 8002
      weight: 100
    timeout: 5s
