Library/IstioFiles/reviewservice-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviewservice-mirror
spec:
  hosts:
    - reviewservice
  http:
  - fault:
      delay:
        percent: 50
        fixedDelay: 5s
    route:
    - destination:
        host: reviewservice
        port:
          number: 8003
      weight: 100
    mirror:
      host: reviewservice-v2
      port:
        number: 8006
    mirrorPercentage: 
        value: 100
