Library/IstioFiles/reviewservice-policy.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-token-policy
spec:
  selector:
    matchLabels:
      app: reviewservice
  action: DENY
  rules:
  - to:
    - operation:
        paths: ["/"]
    when:
    - key: request.headers[Authorization]
      notValues: ["*"]
